--- a/css/main.css
+++ b/css/main.css
@@ -549,7 +549,7 @@ main{
   -ms-flex-align: center;
       align-items: center;
   font-family: 'Poppins', sans-serif;
-  background: url("../images/error-bg.jpg");
+  background: url("../images/Searchs_004.png");
   background-size: cover;
   background-position: center center;
   padding: 15px;
